[package]
name = "ras_auth"
version = "0.1.0"
edition = "2021"
description = "Microservice for authentication, used together with ras_service"
license = "MIT"
repository="https://github.com/Ailysom/ras-auth.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ras_service = {version = "0.2.0", features = ["Authentication"]}
sqlx = {version = "0.5.0", features = ["runtime-tokio-native-tls", "sqlite"]}
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
ring = "0.16"
base64 = "0.13"
openssl = "0.10.0"
rand = "0.8.0"